--- a/Resources/MojitoBlog/styles.css
+++ b/Resources/MojitoBlog/styles.css
@@ -4,30 +4,44 @@
 *  MIT license, see LICENSE file for details
 */
 
+@font-face {
+    font-family: 'BMJUA';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'NanumSquareRound';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
-    font-weight: 100;
 }
 
 body {
     background: #fff;
     color: #000;
-    font-family: Helvetica, Arial;
+    font-family: NanumSquareRound;
     text-align: center;
 }
 
 .wrapper {
     margin-left: auto;
     margin-right: auto;
-    padding: 40px;
+    padding: 15%;
     text-align: left;
 }
 
+.wrapper a {
+    margin: 0 7px;
+}
+
 .contents {
-    width: 85%;
+    width: 80vmin;
     margin-left: auto;
     margin-right: auto;
     padding: 40px;
@@ -39,10 +53,10 @@ header {
 }
 
 header .wrapper {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    text-align: center;
-    background-color: #023279;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: right;
+    background-color: #F5DF4D;
 }
 
 header a {
@@ -58,6 +72,7 @@ header .site-name {
 nav {
     margin-top: 20px;
     background-color: #fff;
+    width: 85%;
 }
 
 nav li {
@@ -214,7 +229,7 @@ footer p {
 }
 
 @media(max-width: 600px) {
-    .wrapper {
+    .contents {
         padding: 40px 20px;
     }
 }
