--- a/Resources/MojitoBlog/styles.css
+++ b/Resources/MojitoBlog/styles.css
@@ -16,6 +16,13 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
 * {
     margin: 0;
     padding: 0;
@@ -25,7 +32,7 @@
 body {
     background: #fff;
     color: #000;
-    font-family: NanumSquareRound;
+    font-family: Pretendard-Regular;
     text-align: center;
 }
 
@@ -45,6 +52,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding: 40px;
+    padding-top: 30px;
     text-align: left;
 }
 
@@ -90,8 +98,9 @@ nav li a.selected {
 }
 
 h1 {
-    margin-bottom: 20px;
-    font-size: 2em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 1.5em;
 }
 
 h2 {
@@ -111,15 +120,19 @@ a {
     margin-bottom: 40px;
 }
 
-
+.flex_div{
+    display: flex;
+}
 
 .item-list > li {
     display: block;
     padding: 20px;
-    border-radius: 20px;
+/*    border-radius: 20px;*/
     background-color: #fff;
     margin-bottom: 20px;
-    box-shadow: 0px 0px 20px 0px #dadada;
+/*    border-bottom: 2px solid #939597;*/
+/*    box-shadow: 0px 0px 20px 0px #dadada;*/
+        border-bottom: 1px solid #93959738;
 }
 .item-list > li {
     background-color: #fff;
@@ -135,13 +148,22 @@ a {
 }
 
 .item-list p {
+    white-space: normal;
+    line-height: 1.2;
+    text-align: left;
+    word-wrap: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
     margin-bottom: 0;
     color: gray;
+    overflow: hidden;
 }
 
 .tag-list {
     margin-top: 15px;
     margin-left: -5px;
+    float: left;
 }
 
 .profile_pic{
@@ -201,6 +223,16 @@ footer p {
     height: 25px;
 }
 
+article h1{
+    margin-top: 0px;
+}
+
+.date{
+    margin-top: 23px;
+    font-size: 13px;
+    text-align: right;
+}
+
 @media (prefers-color-scheme: dark) {
     body {
         background-color: #fff;
@@ -221,7 +253,9 @@ footer p {
 
     .item-list > li {
         background-color: #fff;
-        box-shadow: 0px 0px 20px 0px #dadada;
+/*        border-bottom: 2px solid #939597;*/
+/*        box-shadow: 0px 0px 20px 0px #dadada;*/
+        border-bottom: 1px solid #93959738;
     }
 
     header {
@@ -231,5 +265,17 @@ footer p {
 @media(max-width: 600px) {
     .contents {
         padding: 40px 20px;
+    }
+}
+
+@media(max-width: 380px) {
+    h1{
+        font-size: 1.2em;
+    }
+    p{
+        font-size: 0.8em;
+    }
+    a{
+        font-size: 0.8em;
     }
 }
