--- a/Resources/MojitoBlog/styles.css
+++ b/Resources/MojitoBlog/styles.css
@@ -109,21 +109,25 @@ header .site-name {
 }
 
 nav {
-    margin-top: 20px;
+    border-bottom: 1px solid #e7e8e8;
+    width: 72vmin;
+    margin: auto;
+    margin-top: 30px;
     background-color: #fff;
-    width: 85%;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 nav li {
     display: inline-block;
-    margin: 0 7px;
     line-height: 1.5em;
-    margin-left: 20px;
+    margin-right: 20px;
     margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 nav ul {
-    text-align: right;
+    text-align: left;
 }
 
 nav li a.selected {
@@ -213,6 +217,8 @@ li b {
     height: 80px;
     border-radius: 40px;
     margin-right: 1.5em;
+    border: 2px solid #ffffff;
+    box-shadow: 0px 0px 3px 0px #6b6b6b;
 }
 
 article .tag-list li{
