--- a/Resources/MojitoBlog/styles.css
+++ b/Resources/MojitoBlog/styles.css
@@ -485,3 +485,9 @@ div.content ul li{
 .inyong{
     margin-top:
 }
+
+.juso{
+    color: #0006ff;
+    font-size: 16px;
+    text-decoration: underline;
+}
