--- a/Resources/MojitoBlog/styles.css
+++ b/Resources/MojitoBlog/styles.css
@@ -394,6 +394,7 @@ pre {
 }
 
 pre code {
+    background-color: #1a1a1a;
     font-family: 'Pretendard-Regular', sans-serif;
     display: block;
     padding: 0 20px;
@@ -500,4 +501,10 @@ div.content ul li a{
 
 img{
     width: 100%;
+}
+
+code{
+    background-color: gainsboro;
+    border-radius: 10px;
+    padding: 0px 3px 0px 3px;
 }
